--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 }
 
 dependencies {
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// Thymeleaf拡張ライブラリ
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
